--- a/index.html
+++ b/index.html
@@ -1,48 +1,102 @@
 <!DOCTYPE html>
 <html lang="es">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Google</title>
+		<link rel="stylesheet" href="estilos.css" />
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google</title>
-    <link rel="stylesheet" href="estilos.css">
-</head>
+	<body>
+		<header>
+			<ul class="menu-superior">
+				<div class="left-side">
+					<li>
+						<svg
+							class="icon"
+							style="fill: #70757a; width: 24px; height: 24px"
+							viewBox="0 0 24 24"
+							xmlns="http://www.w3.org/2000/svg"
+						>
+							<path d="M0 0h24v24H0z" fill="none"></path>
+							<path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
+						</svg>
+					</li>
+					<li><a class="active" href="#">Todo</a></li>
+					<li><a href="#">Imágenes</a></li>
+				</div>
+				<div class="right-side">
+					<li>
+						<svg
+							class="icon"
+							style="fill: #70757a; width: 24px; height: 24px"
+							focusable="false"
+							viewBox="0 0 24 24"
+						>
+							<path
+								d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"
+							></path>
+						</svg>
+					</li>
+					<li>
+						<img
+							class="redondo imagen-miniatura"
+							src="https://yt3.ggpht.com/ytc/AAUvwnghseEtkmMKKP3nFqwp4rIsLCQdBdJKRwJvqT68=s88-c-k-c0x00ffffff-no-rj"
+						/>
+					</li>
+				</div>
+			</ul>
+		</header>
+		<main>
+            <div class="main">
 
-<body>
-    <header>
-        <ul class="menu-superior">
-            <li><svg class="icon" style="fill:#70757a;width:24px;height:24px" viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 0h24v24H0z" fill="none"></path>
-                    <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
-                </svg></li>
-            <li>Todos</li>
-            <li>Imágenes</li>
-            <li><svg class="icon" focusable="false" viewBox="0 0 24 24">
-                    <path
-                        d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z">
-                    </path>
-                </svg></li>
-            <li><img class="redondo imagen-miniatura"
-                    src="https://yt3.ggpht.com/ytc/AAUvwnghseEtkmMKKP3nFqwp4rIsLCQdBdJKRwJvqT68=s88-c-k-c0x00ffffff-no-rj">
-            </li>
-        </ul>
-    </header>
-    <main>
-        <img src="https://www.google.com.ar/logos/doodles/2020/celebrating-fanny-eaton-6753651837108432-l.png">
-        <input>
-    </main>
-    <aside>
-        Ofrecido por Google en: English
-    </aside>
-    <footer>
-        <h1>Argentina</h1>
-        <ul class="menu-inferior">
-            <li>Preferencias</li>
-            <li>Privacidad</li>
-            <li>Condiciones</li>
-        </ul>
-    </footer>
-</body>
+			<img
+				class="main-img"
+				src="https://www.google.com.ar/logos/doodles/2020/celebrating-fanny-eaton-6753651837108432-l.png"
+			/>
+			<div class="input-icons">
+				<svg
+					focusable="false"
+					xmlns="http://www.w3.org/2000/svg"
+					viewBox="0 0 24 24"
+					style="fill: #70757a; width: 28px; height: 28px"
+					class="icon1"
+				>
+					<path
+						d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
+					></path>
+				</svg>
+				<svg
+					focusable="false"
+					xmlns="http://www.w3.org/2000/svg"
+					viewBox="0 0 24 24"
+					style="fill: #70757a; width: 28px; height: 28px"
+					class="icon2"
+				>
+					<path
+						d="M12 14c1.66 0 2.99-1.34 2.99-3L15 5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3zm5.3-3c0 3-2.54 5.1-5.3 5.1S6.7 14 6.7 11H5c0 3.41 2.72 6.23 6 6.72V21h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"
+					></path>
+				</svg>
+				<input class="input" type="text" />
+			</div>
+			<aside>Ofrecido por Google en:</aside>
+			<div class="link-main">
+				<a href="#"> English </a>
+				<a href="#"> Español (Latinoamérica)</a>
+			</div>
+		</main>
+		<footer>
+            <div class="arg">
 
+               Argentina
+            </div>
+                <ul class="menu-inferior">
+                    <li>Preferencias</li>
+                    <li>Privacidad</li>
+                    <li>Condiciones</li>
+                </ul>
+        </div>
+            
+		</footer>
+	</body>
 </html>
